run updates only once per week

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -1,6 +1,8 @@
 #!/bin/bash
 set -eo pipefail
 
+# update once a week: {{ output "date" "+%Y-%V" | trim }}
+
 echo "Making sure prebuilt binaries are installed..."
 
 # make sure cargo in in PATH during system bootstrapping
