add hyprland config

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -16,6 +16,13 @@ packages=(
     seahorse
     # gtk dark theme for legacy apps, see configure/gsettings
     adw-gtk3-theme
+
+    # hyprland
+    hyprland
+    polkit-gnome # authentication agent
+    dunst # notification daemon
+    grim slurp # screenshots
+    waybar wlsunset # disabled in current config
 )
 installed="$(dnf list installed)"
 for package in "${packages[@]}"; do
