disable commit singning on server

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -4,8 +4,10 @@
 	defaultRemote = origin
 [clean]
 	requireForce = false
+{{- if not .isServer }}
 [commit]
 	gpgsign = true
+{{- end }}
 [diff]
 	tool = difftastic
 	submodule = log
