remove unnecessary dependencies
f34-backgrounds was pulling in extra stuff for other DEs,
for example the file manager of KDE.

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -8,7 +8,7 @@ echo "Installing GUI stuff..."
 packages=(
     wl-clipboard
     alacritty
-    f34-backgrounds
+    f34-backgrounds-gnome
     code
     # yubikey
     pam-u2f pamu2fcfg
