--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -15,6 +15,11 @@
 	cmd = difft "$LOCAL" "$REMOTE"
 [fetch]
 	prune = true
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
 [gpg]
 	format = ssh
 {{- if not .isServer }}
