add alacritty to gnome dock

--- a/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
@@ -61,7 +61,7 @@ gsettings set org.gnome.system.locale region "de_CH.UTF-8"
 dconf write /org/gnome/shell/favorite-apps "[
     'firefox.desktop',
     'code.desktop',
-    'org.gnome.Terminal.desktop',
+    'Alacritty.desktop',
     'org.gnome.Nautilus.desktop'
     ]"
 
