--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -5,7 +5,7 @@ set -eo pipefail
 
 echo "Making sure prebuilt binaries are installed..."
 
-# make sure cargo in in PATH during system bootstrapping
+# make sure cargo is in PATH during system bootstrapping
 # shellcheck source=/dev/null
 source "$HOME/.cargo/env"
 
