--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -20,6 +20,7 @@ packages=(
     cargo-generate
     cargo-nextest
     atuin
+    unlicense
 )
 
 cargo binstall -y --log-level warn "${packages[@]}"
