--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -45,8 +45,10 @@
 	recurse = true
 [user]
 	name = Remo Senekowitsch
-	email = {{ .op.email }}
+	email = remo@buenzli.dev
 	signingkey = ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIM2geN1p04/RFi6LPt8hoCvTfEKhR1RH6iuH9N9wKpD7
+[includeIf "hasconfig:remote.*.url:git@github.zhaw.ch*/**"]
+	path = ~/.config/git/config-zhaw
 
 [alias]
 	s = status --short
