git: rewrite https urls to ssh

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -43,6 +43,12 @@
 	enabled = true
 [submodule]
 	recurse = true
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+[url "ssh://git@github.zhaw.ch/"]
+	insteadOf = https://github.zhaw.ch/
+[url "ssh://git@git.buenzli.dev/"]
+	insteadOf = https://git.buenzli.dev/
 [user]
 	name = Remo Senekowitsch
 	email = remo@buenzli.dev
