hyprland: use fuzzel as app launcher

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -20,6 +20,7 @@ packages=(
     # hyprland
     hyprland
     polkit-gnome # authentication agent
+    fuzzel # app launcher
     dunst # notification daemon
     grim slurp # screenshots
     waybar wlsunset # disabled in current config
