chezmoi: make templates more lsp-friendly

--- a/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -exo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 echo "Installing media codecs..."
 
