--- a/.chezmoiscripts/3_configure/run_once_after_yubikey.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_once_after_yubikey.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -eo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 # see:
 # https://fedoramagazine.org/use-fido-u2f-security-keys-with-fedora-linux/
