--- a/.chezmoiscripts/3_configure/run_once_after_zsa.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_once_after_zsa.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -eo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 echo "Making sure ZSA keyboards can be flashed..."
 
