--- a/.chezmoiscripts/3_configure/run_onchange_after_firefox.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_firefox.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -eo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 # trigger a rerun of this script if the policies.json changes
 #
