--- a/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -eo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 url_prefix="https://extensions.gnome.org/extension-data"
 zip_postfix="shell-extension.zip"
