--- a/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -eo pipefail
 
-{{ template "skipOnServer" . -}}
+# {{ template "skipOnServer" . }}
 
 ######## appearance ########
 
