hyprland: add swayidle and swaylock

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -21,6 +21,7 @@ packages=(
     hyprland
     polkit-gnome # authentication agent
     swaybg # wallpaper
+    swayidle swaylock # lock screen on idle
     fuzzel # app launcher
     dunst # notification daemon
     grim slurp # screenshots
