gnome: tweak extension settings

--- a/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
@@ -68,3 +68,9 @@ dconf write /org/gnome/shell/extensions/just-perfection/panel-in-overview \
     true
 dconf write /org/gnome/shell/extensions/just-perfection/window-maximized-on-create \
     true
+dconf write /org/gnome/shell/extensions/just-perfection/show-apps-button \
+    true
+dconf write /org/gnome/shell/extensions/just-perfection/workspace \
+    true
+dconf write /org/gnome/shell/extensions/just-perfection/workspaces-in-app-grid \
+    true
