--- a/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gnome_ext.sh.tmpl
@@ -66,8 +66,9 @@ dconf write /org/gnome/shell/extensions/just-perfection/panel \
     false
 dconf write /org/gnome/shell/extensions/just-perfection/panel-in-overview \
     true
-dconf write /org/gnome/shell/extensions/just-perfection/window-maximized-on-create \
-    true
+## buggy
+# dconf write /org/gnome/shell/extensions/just-perfection/window-maximized-on-create \
+#     true
 dconf write /org/gnome/shell/extensions/just-perfection/show-apps-button \
     true
 dconf write /org/gnome/shell/extensions/just-perfection/workspace \
