simplify git url rewriting

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -43,12 +43,8 @@
 	enabled = true
 [submodule]
 	recurse = true
-[url "ssh://git@github.com/"]
-	insteadOf = https://github.com/
-[url "ssh://git@github.zhaw.ch/"]
-	insteadOf = https://github.zhaw.ch/
-[url "ssh://git@git.buenzli.dev/"]
-	insteadOf = https://git.buenzli.dev/
+[url "ssh://git@"]
+	pushInsteadOf = https://
 [user]
 	name = Remo Senekowitsch
 	email = {{ .op.email }}
