--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -56,7 +56,7 @@
 	s = status --short
 	f = fetch --all
 	l = !git log --oneline || true
-	g = !git log --oneline --all --graph || true
+	g = !git log --oneline --graph --branches='*' --remotes='*' HEAD || true
 
 	au = add --update
 	aa = add --all
