helix: detect actual lang of chezmoi templates

--- a/.chezmoiscripts/5_update/run_onchange_after_update.sh.tmpl
+++ b/.chezmoiscripts/5_update/run_onchange_after_update.sh.tmpl
@@ -7,6 +7,7 @@ echo "Performing system update..."
 sudo dnf update -y
 
 echo "Making sure rust is up to date..."
+# shellcheck source=/dev/null
 source "$HOME/.cargo/env"
 rustup --quiet update
 
