--- a/dot_config/fish/conf.d/ssh_auth_sock.fish.tmpl
+++ b/dot_config/fish/conf.d/ssh_auth_sock.fish.tmpl
@@ -1,4 +1,4 @@
-{{ template "skipOnServer" . }}
+# {{ template "skipOnServer" . }}
 
 # this is a workaround for
 # https://github.com/martinvonz/jj/issues/63
