--- a/private_dot_ssh/private_config.tmpl
+++ b/private_dot_ssh/private_config.tmpl
@@ -16,4 +16,5 @@ Host bg
   User git
   HostName git.buenzli.dev
 
-{{ .op.ssh_hosts }}
+# chezmoi:template:left-delimiter="# {{"
+# {{ .op.ssh_hosts }}
