--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -29,8 +29,24 @@ log_node = "my_log_node"
 "change_id" = "cyan"
 "working_copy change_id" = "bright cyan"
 
-"node working_copy" = { fg = "#ffaa00" }
+# branches: brown
+"branch" = "#c3813b"
+"branches" = "#c3813b"
+"local_branches" = "#c3813b"
+"remote_branches" = "#c3813b"
+"working_copy branch" = "#c3813b"
+"working_copy branches" = "#c3813b"
+"working_copy local_branches" = "#c3813b"
+"working_copy remote_branches" = "#c3813b"
+
+"tag" = "yellow"
+"tags" = "yellow"
+"working_copy tag" = "bright yellow"
+"working_copy tags" = "bright yellow"
+
+"node working_copy" = { fg = "yellow" }
 "node immutable" = { fg = "white" }
+"node working_copy immutable" = { fg = "yellow" }
 
 # https://github.com/martinvonz/jj/blob/main/cli/src/config/templates.toml
 [template-aliases]
