jj: make branch prefix more standard

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -3,7 +3,7 @@ name = "Remo Senekowitsch"
 email = "{{ .op.email }}"
 
 [git]
-push-branch-prefix = "remo-"
+push-branch-prefix = "remo/"
 
 [ui]
 default-command = ["log", "--template", "my_log_compact_comfortable"]
