jj: remap alias s to show
status already has a short alias of st.
I also expect to use show more.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -20,7 +20,7 @@ g = ["log", "--template", "builtin_log_oneline", "--revisions", "all()"]
 l = ["log", "--template", "builtin_log_oneline", "--revisions", "ancestors(@)"]
 p = ["git", "push"]
 r = ["rebase"]
-s = ["status"]
+s = ["show"]
 
 [templates]
 log = "builtin_log_comfortable"
