jj: add detailed log alias

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -18,6 +18,7 @@ e = ["edit"]
 f = ["git", "fetch"]
 g = ["log", "--template", "builtin_log_oneline", "--revisions", "all()"]
 l = ["log", "--template", "builtin_log_oneline", "--revisions", "ancestors(@)"]
+ll = ["log", "--template", "builtin_log_detailed","--revisions", "all()"]
 p = ["git", "push"]
 r = ["rebase"]
 s = ["show"]
