jj: add short username to default log output

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -65,6 +65,7 @@ if(root,
       format_short_change_id_with_hidden_and_divergent_info(self),
       if(divergent, format_short_commit_id(commit_id)),
       if(conflict, label("conflict", "conflict")),
+      if(author.email(), author.username(), email_placeholder),
       branches,
       tags,
       working_copies,
