vscodium: migrate from vscode

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -9,7 +9,7 @@ packages=(
     wl-clipboard
     alacritty
     f34-backgrounds-gnome
-    code
+    codium
     # yubikey
     pam-u2f pamu2fcfg
     # disable gnome-keyring-encryption
