--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -26,6 +26,7 @@ packages=(
     dunst # notification daemon
     grim slurp # screenshots
     waybar wlsunset # disabled in current config
+    blueman # bluetooth GUI
 )
 installed="$(dnf list installed)"
 for package in "${packages[@]}"; do
