jj: add alias for colocated clone

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -25,6 +25,6 @@ do
 
     if ! [ -d ~/repos/"$repo_name" ] ; then
         echo "Cloning $repo_name..."
-        jj git clone "$repo" ~/repos/"$repo_name"
+        jj clone "$repo" ~/repos/"$repo_name"
     fi
 done
