--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -23,6 +23,7 @@ ll =["log", "--template", "builtin_log_detailed","--revisions", "all()"]
 p = ["git", "push"]
 r = ["rebase"]
 s = ["show"]
+clone = ["git", "clone", "--colocate"]
 
 [templates]
 log = "builtin_log_comfortable"
