--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -22,9 +22,10 @@ packages=(
     atuin
     unlicense
     jj-cli
+    ccase
 )
 
-cargo binstall -y --log-level warn "${packages[@]}"
+cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
 # TODO install with cargo-binstall once cargo-dist is setup
 cargo install git-quickprune
