jj: update node symbols for new terminal font

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -76,10 +76,10 @@ coalesce(
       if(conflict, "conflict"),
     ),
     coalesce(
-      if(current_working_copy, "◉"),
+      if(current_working_copy, "⬤"),
       if(immutable, "•"),
       if(conflict, "🗙"),
-      "◉",
+      "•",
     )
   )
 )
