--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -25,7 +25,7 @@ packages=(
     fuzzel # app launcher
     dunst # notification daemon
     grim slurp # screenshots
-    waybar wlsunset # disabled in current config
+    wlsunset # disabled in current config
     blueman # bluetooth GUI
 )
 installed="$(dnf list installed)"
