hyprland: use wofi as app launcher
fuzzel is slow, janky and ugly

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -22,7 +22,7 @@ packages=(
     polkit-gnome # authentication agent
     swaybg # wallpaper
     swayidle swaylock # lock screen on idle
-    fuzzel # app launcher
+    wofi # app launcher
     dunst # notification daemon
     grim slurp # screenshots
     wlsunset # disabled in current config
