install watchexec-cli

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -23,6 +23,7 @@ packages=(
     unlicense
     jj-cli
     ccase
+    watchexec-cli
 )
 
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
