jj: add alias for updating main

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -13,6 +13,8 @@ diff.tool = ["difft", "--color=always", "--syntax-highlight", "off", "$left", "$
 
 [aliases]
 b = ["branch"]
+bs = ["branch", "set"]
+bsm = ["branch", "set", "main"]
 c = ["commit"]
 d = ["describe"]
 e = ["edit"]
