make cargo-binstall update itself

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -17,6 +17,7 @@ if ! which cargo-binstall &> /dev/null ; then
 fi
 
 packages=(
+    cargo-binstall # self-update
     cargo-generate
     cargo-nextest
     atuin
