add screenshot editor swappy

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -24,7 +24,7 @@ packages=(
     swayidle swaylock # lock screen on idle
     wofi # app launcher
     dunst # notification daemon
-    grim slurp # screenshots
+    grim slurp swappy # screenshots
     wlsunset # disabled in current config
     blueman # bluetooth GUI
 )
