hyprland: replace sway utils

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -20,8 +20,8 @@ packages=(
     # hyprland
     hyprland
     polkit-gnome # authentication agent
-    swaybg # wallpaper
-    swayidle swaylock # lock screen on idle
+    hyprpaper # wallpaper
+    hypridle hyprlock # lock screen on idle
     wofi # app launcher
     dunst # notification daemon
     grim slurp swappy # screenshots
