install pavucontrol for audio configuration

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -27,6 +27,7 @@ packages=(
     grim slurp swappy # screenshots
     wlsunset # disabled in current config
     blueman # bluetooth GUI
+    pavucontrol # audio GUI
 )
 installed="$(dnf list installed)"
 for package in "${packages[@]}"; do
