fix binstall on server

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -28,9 +28,11 @@ packages=(
     choose
 )
 
+# {{ if not .isServer }}
 echo "Exporting GITHUB_TOKEN secret for cargo-binstall..."
 GITHUB_TOKEN="$(op read "op://Personal/GitHub Personal Access Token/token")"
 export GITHUB_TOKEN
+# {{ end }}
 
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
