--- a/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_flathub.sh.tmpl
@@ -9,6 +9,7 @@ sudo flatpak remote-modify --enable flathub
 packages=(
     org.telegram.desktop
     md.obsidian.Obsidian
+    org.chromium.Chromium
 )
 
 flatpak install --noninteractive flathub "${packages[@]}"
