--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -20,12 +20,14 @@ packages=(
     cargo-binstall # self-update
     cargo-generate
     cargo-nextest
+    cargo-outdated
     atuin
     unlicense
     jj-cli
     ccase
     watchexec-cli
     choose
+    openscad-lsp
 )
 
 # {{ if not .isServer }}
