avoid installing openscad on servers

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -10,6 +10,7 @@ packages=(
     alacritty
     f34-backgrounds-gnome
     codium
+    openscad clang-tools-extra
     # yubikey
     pam-u2f pamu2fcfg
     # disable gnome-keyring-encryption
