avoid installing stuff from source

--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -20,7 +20,7 @@ packages=(
     cargo-binstall # self-update
     cargo-generate
     cargo-nextest
-    cargo-outdated
+    # cargo-outdated (no binaries for ARM)
     atuin
     unlicense
     jj-cli
