jj: improve bmm alias

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -14,7 +14,7 @@ diff.tool = ["difft", "--color=always", "--syntax-highlight", "off", "$left", "$
 [aliases]
 b = ["branch"]
 bm = ["branch", "move"]
-bmm = ["branch", "move", "main"]
+bmm = ["branch", "move", "main", "--to"]
 c = ["commit"]
 d = ["describe"]
 e = ["edit"]
