jj: fetch from all remotes

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -18,7 +18,7 @@ bmm = ["branch", "move", "main", "--to"]
 c = ["commit"]
 d = ["describe"]
 e = ["edit"]
-f = ["git", "fetch"]
+f = ["git", "fetch", "--all-remotes"]
 g = ["log", "--template", "builtin_log_oneline", "--revisions", "all()"]
 l = ["log", "--template", "builtin_log_oneline", "--revisions", "ancestors(@)"]
 ll =["log", "--template", "builtin_log_detailed","--revisions", "all()"]
