hyprland: add emoji picker

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -30,6 +30,7 @@ packages=(
     blueman # bluetooth GUI
     pavucontrol # audio GUI
     brightnessctl # laptop screen brightness
+    wtype # needed by wofi_emoji.sh
 )
 installed="$(dnf list installed)"
 for package in "${packages[@]}"; do
