--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -45,7 +45,7 @@
 	email = # {{ .op.email }}
 
 [alias]
-	s = status --short
+	st = status --short
 	f = fetch --all
 	l = !git log --oneline || true
 	g = !git log --oneline --graph --branches='*' --remotes='*' HEAD || true
