jj: make log aliases more logical
l = log
ld = log detailed
g = graph
gd = graph detailed

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -19,9 +19,10 @@ c = ["commit"]
 d = ["describe"]
 e = ["edit"]
 f = ["git", "fetch", "--all-remotes"]
-g = ["log", "--template", "builtin_log_oneline", "--revisions", "all()"]
 l = ["log", "--template", "builtin_log_oneline", "--revisions", "ancestors(@)"]
-ll =["log", "--template", "builtin_log_detailed","--revisions", "all()"]
+ld =["log", "--template", "builtin_log_detailed","--revisions", "ancestors(@)"]
+g = ["log", "--template", "builtin_log_oneline", "--revisions", "all()"]
+gd =["log", "--template", "builtin_log_detailed","--revisions", "all()"]
 p = ["git", "push"]
 r = ["rebase"]
 s = ["show"]
