jj: hardcode push bookmark prefix

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -3,7 +3,7 @@ name = "Remo Senekowitsch"
 email = "{{ .op.email }}"
 
 [git]
-push-bookmark-prefix = "{{ .chezmoi.username }}/"
+push-bookmark-prefix = "remo/"
 
 [ui]
 default-command = ["log", "--template", "my_log_compact_comfortable"]
