--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -11,6 +11,7 @@ packages=(
     f34-backgrounds-gnome
     codium
     openscad clang-tools-extra
+    meld # merge tool for jj
     # yubikey
     pam-u2f pamu2fcfg
     # disable gnome-keyring-encryption
