jj: tweak default log revset

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -27,8 +27,8 @@ p = ["git", "push"]
 r = ["rebase"]
 s = ["show"]
 
-# [revsets]
-# log = "ancestors(reachable(mine(), ~::trunk()), 2) | trunk()" # broken
+[revsets]
+log = "ancestors(::mine() ~ ::trunk(), 2) | trunk()"
 
 [templates]
 log = "builtin_log_comfortable"
