gnome: use right alt as compose key

--- a/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_gsettings.sh.tmpl
@@ -51,7 +51,7 @@ gsettings set org.gnome.desktop.peripherals.touchpad tap-and-drag-lock true
 gsettings set org.gnome.desktop.peripherals.touchpad speed 0.2
 
 # keyboard
-gsettings set org.gnome.desktop.input-sources xkb-options "['compose:menu']"
+gsettings set org.gnome.desktop.input-sources xkb-options "['compose:ralt']"
 dconf write /desktop/ibus/panel/emoji/hotkey "@as []" # was Ctrl-. which overlaps with vscode
 
 # locale
