jj: special-case log output for dependabot

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -57,7 +57,13 @@ if(root,
       format_short_change_id_with_hidden_and_divergent_info(self),
       if(divergent, format_short_commit_id(commit_id)),
       if(conflict, label("conflict", "conflict")),
-      if(author.email(), author.username(), email_placeholder),
+      if(author.email(),
+        if(author.username().contains("dependabot"),
+          author.username().substr(9, 19),
+          author.username(),
+        ),
+        email_placeholder,
+      ),
       bookmarks,
       tags,
       working_copies,
