jj: add yolo alias
This makes all commits mutable, including the main branch. Yolo!

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -27,6 +27,9 @@ p = ["git", "push"]
 r = ["rebase"]
 s = ["show"]
 
+# scripts
+yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
+
 [revsets]
 log = "present(@) | ancestors(trunk()..mine(), 2) | trunk()"
 
