--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -29,6 +29,7 @@ s = ["show"]
 
 # scripts
 yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()"]
+yolont = ["config", "unset", "--repo", "revset-aliases.'immutable_heads()'"]
 
 [revsets]
 log = "present(@) | ancestors(trunk()..mine(), 2) | trunk()"
