--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -22,6 +22,6 @@ do
 
     if ! [ -d ~/repos/"$repo_name" ] ; then
         echo "Cloning $repo_name..."
-        ~/.local/bin/clone "$repo" ~/repos/"$repo_name"
+        clone "$repo" ~/repos/"$repo_name"
     fi
 done
