--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -30,6 +30,7 @@ yolo = ["config", "set", "--repo", "revset-aliases.'immutable_heads()'", "root()
 yolont = ["config", "unset", "--repo", "revset-aliases.'immutable_heads()'"]
 drag = ["bookmark", "move", "--to", "@-"]
 track-mine = ["bookmark", "track", "glob:remo/*@origin"]
+clone = ["util", "exec", "--", "{{ .chezmoi.homeDir }}/.config/jj/scripts/clone.nu"]
 
 [revsets]
 log = "present(@) | ancestors(trunk()..mine(), 2) | trunk()"
