fix breakage after fedora 41 update

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -21,7 +21,7 @@ packages=(
 
     # hyprland
     hyprland
-    polkit-gnome # authentication agent
+    polkit # authentication agent
     hyprpaper # wallpaper
     hypridle hyprlock # lock screen on idle
     wofi # app launcher
