--- a/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
@@ -10,9 +10,8 @@ sudo dnf install -y gstreamer1-plugins-{good-\*,base} gstreamer1-plugin-openh264
 # The bad-* plugins are borked packages for some reason. TODO Check at some point if that's still true.
 # sudo dnf install -y gstreamer1-plugins-{bad-\*,good-\*,base} gstreamer1-plugin-openh264 gstreamer1-libav --exclude=gstreamer1-plugins-bad-free-devel
 sudo dnf install -y lame\* --exclude=lame-devel
-sudo dnf group upgrade --with-optional Multimedia --allowerasing -y
 
-sudo dnf groupupdate -y sound-and-video
+sudo dnf update @multimedia --allowerasing -y
 
 # https://docs.fedoraproject.org/en-US/quick-docs/openh264/
 sudo dnf install -y gstreamer1-plugin-openh264 mozilla-openh264
